Merged revisions 78392 via svnmerge from svn+ssh://pythondev@svn.python.org/python/trunk

........
  r78392 | victor.stinner | 2010-02-24 00:16:07 +0100 (mer., 24 févr. 2010) | 4 lines

  Issue #7649: Fix u'%c' % char for character in range 0x80..0xFF

  => raise an UnicodeDecodeError. Patch written by Ezio Melotti.
........